--- a/AssigmentRookie/src/main/resources/application.properties
+++ b/AssigmentRookie/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= none
 
 server.port=9999
+
+# App Properties
+books.app.jwtSecret=booksSecretKey
+books.app.jwtExpirationMs=86400000
