--- a/AssigmentRookie/src/main/resources/application.properties
+++ b/AssigmentRookie/src/main/resources/application.properties
@@ -8,8 +8,11 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
 
-server.port=9999
+#context path
+server.servlet.context-path=/BookStore
 
 # App Properties
 books.app.jwtSecret=booksSecretKey
 books.app.jwtExpirationMs=86400000
+
+server.port=9999
